# Algorithms-and-data-structures

./: 4A.cpp  4B.cpp  4F  4F.cpp  Algorithms-and-data-structures - Ярлык.lnk  README.md  file1.txt  ~$README.md
Lab1/: AllCodes.txt
Lab2/: 2A.cpp  2B.cpp  2C.cpp  2D.py  2E.cpp
Lab3/: 3A.cpp  3B.cpp  3C.cpp  3D.cpp
Lab4/: 4C.cpp  4D.cpp  4E.cpp
Lab5/: 6A.cpp  6B.cpp
Lab6/: 5A.c  5A.cpp  5B.cpp  5C.cpp  5D.cpp
googletest/untitled4/: CMakeLists.txt  main.cpp  test.cpp  test.h
